--- a/Class Presentations/Days 5 and Beyond/Template.html
+++ b/Class Presentations/Days 5 and Beyond/Template.html
@@ -80,8 +80,20 @@
 					</h2>
 				</section>
 
-				<section>
-					<h2>Topic</h2>
+				<section data-markdown>
+					## `&lt;example /&gt;`
+
+					lots of info about said example. Write content using inline or external Markdown. Instructions and more info available in the [readme](https://github.com/hakimel/reveal.js#markdown).
+
+					* Including
+					* A bulleted
+					* list of things
+					* to think about
+
+					```javascript
+					var Markdown = 'The easiest way to get code samples into your
+					slide deck';
+					```
 				</section>
 
 				<section>
@@ -89,21 +101,11 @@
 					<ul>
 						<li>Use for live coding slides</li>
 					</ul>
-					<script type="text/template">
-						## Markdown support
-
-						Write content using inline or external Markdown.
-						Instructions and more info available in the [readme](https://github.com/hakimel/reveal.js#markdown).
-
+					<div data-markdown>
+						```javascript
+						//It doesn't all have to be MD 
 						```
-						<section data-markdown>
-							## Markdown support
-
-							Write content using inline or external Markdown.
-							Instructions and more info available in the [readme](https://github.com/hakimel/reveal.js#markdown).
-						</section>
-						```
-					</script>
+					</div>
 				</section>
 
 				<section>
