Update Reveal template to match our JS Class template

--- a/Template.html
+++ b/Template.html
@@ -51,7 +51,7 @@
 
 				<!-- Example of nested vertical slides -->
 				<section>
-					<h2>goals</h2>
+					<h2>Goals</h2>
 					<ul class="checklist">
 						<li>
 							<input type="checkbox" id="goal1" checked/>
@@ -72,14 +72,153 @@
 					</ul>
 				</section>
 
-				<section>
-					<h2>
+				<section data-markdown>
+					```javascript
 					try {
 						whatDoYouRemember();
 					}
-					</h2>
+					```
+					</p>
 				</section>
 
+				<section>
+					<h2>Topic</h2>
+				</section>
+
+				<section>
+					<h2>Code Highlight</h2>
+					<section data-markdown>
+						```javascript
+						&lt;p&gt;
+							&lt;span class="file"&gt;Some text&lt;/span&gt;
+						&lt;/p&gt;
+						```
+						```css
+						.file {
+							background-color="#000000";
+						}
+						```
+					</section>
+				</section>
+
+				<section data-markdown>
+					## Topic
+
+					* Bullet points
+				</section>
+
+				<section data-markdown>
+					## `try{assignment();}`
+
+					* Assignment details
+					* Assignment details
+				</section>
+
+				<section data-markdown>
+					<section data-markdown>
+					## `catch{assignment();}`
+
+					* Assignment details
+
+
+
+					</section>
+					<br />
+					### Notes:
+					* Note 1
+					* Note 2
+					* Note 3 (Samsung Galaxy?)
+				</section>
+
+				<section data-markdown>
+					## `while(reminders);`
+
+					Reminder notes
+				</section>
+
+				<section>
+					<h2>Huddle</h2>
+					<ul class="checklist">
+						<li>
+							<input type="checkbox" id="goal1" checked/>
+							<label for="goal1">List of goals/objectives/topics</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal2"/>
+							<label for="goal2">Topic</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal3"/>
+							<label for="goal3">Topic</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal4"/>
+							<label for="goal4">Topic</label>
+						</li>
+					</ul>
+				</section>
+
+				<section data-markdown>
+					## `break;`
+
+					Write a question here
+				</section>
+
+				<section data-markdown>
+					## `continue;`
+
+					Write the answer or summarization
+				</section>
+
+				<section data-markdown>
+					## `try{groupWork();}`
+
+					groupOfFive[0] =
+
+					groupOfFive[1] =
+
+					groupOfFive[2] =
+
+					1. What is your first question?
+					2. What is your second question?
+
+					Any other notes
+
+				</section>
+				<section data-markdown>
+					```javascript
+					finally {
+						talkAboutWhatWeveLearned();
+					}
+					```
+				</section>
+
+				<section data-background="../jsclasspresentationimages/template/loading.jpg">
+				</section>
+
+				<section>
+					<h2>Now We're Done</h2>
+					<ul class="checklist">
+						<li>
+							<input type="checkbox" id="goal1" checked/>
+							<label for="goal1">List of goals/objectives/topics</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal2" checked/>
+							<label for="goal2">Topic</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal3" checked/>
+							<label for="goal3">Topic</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal4" checked/>
+							<label for="goal4">Topic</label>
+						</li>
+					</ul>
+
+					<p text-align="right">At least...by our definition of done.</p>
+				</section>
 				<section data-markdown>
 					## `&lt;example /&gt;`
 
@@ -103,7 +242,7 @@
 					</ul>
 					<div data-markdown>
 						```javascript
-						//It doesn't all have to be MD 
+						//It doesn't all have to be MD
 						```
 					</div>
 				</section>
