Put review questions in slides

--- a/Class Presentations/Days 5 and Beyond/Day5.html
+++ b/Class Presentations/Days 5 and Beyond/Day5.html
@@ -73,7 +73,63 @@
 
 				<section>
 					<section>
-						<h2>Slide Backgrounds</h2>
+						<h2>What is HTML?</h2>
+					</section>
+					<section>
+						<p>(HyperText Markup Language; markup language used to create websites)</p>
+					</section>
+					<section>
+						<h2>What is a block element?</h2>
+					</section>
+					<section>
+						<p>(element that starts on a new line; examples include headers, p, lists and list items)</p>
+					</section>
+					<section>
+						<h2>What is an inline element?</h2>
+					</section>
+					<section>
+						<p>(element that continues on the same line; examples are spans, images, and semantic markup like em or b)</p>
+					</section>
+					<section>
+						<h2>What is a div used for?</h2>
+					</section>
+					<section>
+						<p>(grouping block elements/a block of elements together in their own block element)</p>
+					</section>
+					<section>
+						<h2>What is a span used for?</h2>
+					</section>
+					<section>
+						<p>(grouping inline elements together, often for styling)</p>
+					</section>
+					<section>
+						<h2>What does CSS stand for? What is it used for?</h2>
+					</section>
+					<section>
+						<p>(cascading style sheets, changes presentation of a webpage)</p>
+					</section>
+					<section>
+						<h2>What is this thing called?</h2>
+						
+					</section>
+					<section>
+						<p>(CSS rules)</p>
+					</section>
+					<section>
+						<h2>What are the two parts of a CSS rule?</h2>
+					</section>
+					<section>
+						<p>(selector and declaration)</p>
+					</section>
+					<section>
+						<h2>What are the two parts of a declaration?</h2>
+					</section>
+					<section>
+						<p>(property and value)</p>
+					</section>
+
+
+					<section>
 						<p>
 							Set <code>data-background="#dddddd"</code> on a slide to change the background color. All CSS color formats are supported.
 						</p>
@@ -101,14 +157,13 @@
 				</section>
 
 				<section> <p>
-					-What is HTML? (hypertext markup language; markup language used to create websites)
--What is a block element? (element that starts on a new line; examples include headers, p, lists and list items)
--What is an inline element? (element that continues on the same line; examples are spans, images, and semantic markup like em or b)
--What is a div used for? (grouping block elements/a block of elements together in their own block element)
--What is a span used for? (grouping inline elements together, often for styling)
--What does CSS stand for? What is it used for? (cascading style sheets, changes presentation of a webpage)
--What does CSS use to change a website? (rules)
--What are CSS rules made out of? (selector and declaration; and declaration = property and value)
+-
+-
+-
+-
+-
+-
+-
 </p>
 				</section>
 
