--- a/Class Presentations/Days 5 and Beyond/Day5.html
+++ b/Class Presentations/Days 5 and Beyond/Day5.html
@@ -62,7 +62,7 @@
 						</li>
 						<li>
 							<input type="checkbox" id="goal3"/>
-							<label for="goal2">Split up into groups and project setup</label>
+							<label for="goal2">Split up into groups and begin</label>
 						</li>
 						<li>
 							<input type="checkbox" id="goal4"/>
@@ -154,7 +154,7 @@
 						</li>
 						<li>
 							<input type="checkbox" id="goal3"/>
-							<label for="goal2">Split up into groups and project setup</label>
+							<label for="goal2">Split up into groups and begin</label>
 						</li>
 						<li>
 							<input type="checkbox" id="goal4"/>
@@ -283,9 +283,83 @@
 				</section>
 			</section>
 
+			<section>
+				<h2>Goals</h2>
+				<ul class="checklist">
+					<li>
+						<input type="checkbox" id="goal1" checked/>
+						<label for="goal1">try{whatDoYouRemember();}</label>
+					</li>
+					<li>
+						<input type="checkbox" id="goal2" checked/>
+						<label for="goal1">Guidelines for website project</label>
+					</li>
+					<li>
+						<input type="checkbox" id="goal3"/>
+						<label for="goal2">Split up into groups and begin</label>
+					</li>
+					<li>
+						<input type="checkbox" id="goal4"/>
+						<label for="goal3">Continue development</label>
+					</li>
+				</ul>
+			</section>
 
+			<section>
+				<h2>
+				Split up into groups...
+				</h2>
+			</section>
 
+			<section>
+				<h2>
+				...and begin!
+				</h2>
+			</section>
 
+			<section data-background="../presentation-images/template/loading.jpg">
+			</section>
+
+			<section>
+				<h2>
+				Continue development
+				</h2>
+			</section>
+
+			<section data-markdown>
+				```javascript
+				finally {
+					talkAboutWhatWeveLearned();
+				}
+				```
+			</section>
+
+			<section>
+				<h2>Now We're Done</h2>
+				<ul class="checklist">
+					<li>
+						<input type="checkbox" id="goal1" checked/>
+						<label for="goal1">try{whatDoYouRemember();}</label>
+					</li>
+					<li>
+						<input type="checkbox" id="goal2" checked/>
+						<label for="goal1">Guidelines for website project</label>
+					</li>
+					<li>
+						<input type="checkbox" id="goal3" checked/>
+						<label for="goal2">Split up into groups and begin</label>
+					</li>
+					<li>
+						<input type="checkbox" id="goal4" checked/>
+						<label for="goal3">Continue development</label>
+					</li>
+				</ul>
+
+				<p text-align="right">At least...by our definition of done.</p>
+			</section>
+
+<section></section>
+<section></section>
 
 
 
@@ -364,7 +438,7 @@
 						</li>
 						<li>
 							<input type="checkbox" id="goal3"/>
-							<label for="goal2">Split up into groups and project setup</label>
+							<label for="goal2">Split up into groups and begin</label>
 						</li>
 						<li>
 							<input type="checkbox" id="goal4"/>
@@ -494,7 +568,7 @@
 					```
 				</section>
 
-				<section data-background="../jsclasspresentationimages/template/loading.jpg">
+				<section data-background="../presentation-images/template/loading.jpg">
 				</section>
 
 				<section>
