Write Day2 through Briard challenge

--- a/Class Presentations/reveal-presentations/Day2.html
+++ b/Class Presentations/reveal-presentations/Day2.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Day 5</title>
+		<title>Day 2</title>
 
 		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
 		<meta name="author" content="Hakim El Hattab">
@@ -41,7 +41,7 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>Day 5 (03/0_/2016)</h1>
+					<h1>Day 2 (02/22/2016)</h1>
 					<h3>D-Code</h3>
 				</section>
 
@@ -54,35 +54,139 @@
 					<ul class="checklist">
 						<li>
 							<input type="checkbox" id="goal1"/>
-							<label for="goal1">try{whatDoYouRemember();}</label>
+							<label for="goal0">What is programming?</label>
 						</li>
 						<li>
 							<input type="checkbox" id="goal2"/>
-							<label for="goal1">Guidelines for website project</label>
+							<label for="goal1">Developer tools exploration</label>
 						</li>
 						<li>
 							<input type="checkbox" id="goal3"/>
-							<label for="goal2">Split up into groups and begin</label>
+							<label for="goal2">Build an HTML document (classroom)</label>
 						</li>
 						<li>
 							<input type="checkbox" id="goal4"/>
-							<label for="goal3">Continue development</label>
+							<label for="goal3">Build an HTML document (computer)</label>
 						</li>
 					</ul>
 				</section>
 
 				<section>
 					<h2>
-					try {
-						whatDoYouRemember();
-					}
+					What is programming?
 					</h2>
 				</section>
 
 				<section>
+					<a style="color: #111; font-family: helvetica;" target="_blank" href="https://www.khanacademy.org/video/programming-intro?utm_campaign=embed">
+					</a><br/>
+					<iframe frameborder="0" scrolling="no" width="1280" height="760" src="https://www.khanacademy.org/embed_video?v=FCMxA3m_Imc" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe>
+				</section>
+
+				<section>
 					<section>
-						<h2>What is HTML?</h2>
+						<h2>What is programming?</h2>
+						<p>Computer code is a collection of typed words that the computer
+							can clearly understand. Just as a human translator might
+							translate from the English language to Spanish, the computer
+							interprets these words as ones and zeros. We as humans use
+							programming languages, instead of writing directly in ones and
+							zeros, so we can easily write and understand the computer
+							code and can organize it.
+						</p>
 					</section>
+					<section>
+						<p>We can think of the different lines of our code as being
+							individual instructions that we give to the computer. The
+							computer follows these instructions explicitly to execute
+							our written code.
+						</p>
+						<p><a href="http://earsketch.gatech.edu/category/learning/anatomy-of-an-earsketch-project/what-is-programming">
+							Anatomy of an EarSketch Project </a><p>
+					</section>
+					<aside class="notes">
+						This definition is from Georgia Tech, a university in Atlanta.
+					</aside>
+				</section>
+
+				<!-- <section>
+					<p>
+					We know that was a lot of information to take in
+						but we promise that as we work together as a development team,
+						 utilizing these concepts to create viable products,
+						 and learning new and exciting concepts and tools,
+						 these first days will seem like a breeze.
+					 </p>
+				</section> -->
+
+				<section>
+					<h2>Goals</h2>
+					<ul class="checklist">
+						<li>
+							<input type="checkbox" id="goal1" checked/>
+							<label for="goal0">What is programming?</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal2"/>
+							<label for="goal1">Developer tools exploration</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal3"/>
+							<label for="goal2">Build an HTML document (classroom)</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal4"/>
+							<label for="goal3">Build an HTML document (computer)</label>
+						</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>DEV TIME!!</p>
+				</section>
+
+				<section>
+					<h2>Developers use tools.</h2>
+					<h3>(Instructions for Google Chrome)</h3>
+						<ol>
+							<li>Click "View"</li>
+							<li>Click "Developer"</li>
+							<li>Click "Developer Tools"</li>
+						</ol>
+						<p><i>Or</i>, hit Command + Option + I on your keyboard.</p>
+				</section>
+
+				<section>
+					<h2>Briard Challenge</h2>
+					<img src="../presentation-images/day1/briard.png" alt="This is a briard." style="width:500px;height:500px;">
+				</section>
+
+				<section>
+					<h2>Briard Challenge</h2>
+					<p> Type the following into your browser: <br />
+						<a href="http://www.htmlandcssbook.com/code-samples/chapter-12/example.html">
+							http://www.htmlandcssbook.com/code-samples/chapter-12/example.html </a>
+					</p>
+				</section>
+
+				<section>
+					<h2>Briard Challenge</h2>
+					<ol>
+						<li>Open the Developer Tools</li>
+						<li>Click on the tab that says "Console"</li>
+						<li>Type each line of code, then press enter:
+							<div data-markdown>
+							```javascript
+							intro = document.getElementsByClassName("intro");
+
+							intro[0].innerHTML("Briards are so funny.");
+							```
+						</div>
+						</li>
+						<li>What happens? (Try pressing refresh.)</li>
+					</ol>
+				</section>
+
 					<section>
 						<p>(HyperText Markup Language; markup language used to create websites)</p>
 					</section>
