Add Udacity challenge

--- a/Class Presentations/reveal-presentations/Day2.html
+++ b/Class Presentations/reveal-presentations/Day2.html
@@ -187,6 +187,30 @@
 					</ol>
 				</section>
 
+				<section>
+					<h2>Udacity Challenge</h2>
+					<p> Type the following into your browser: <br />
+						<a href="http://udacity.github.io/js-basics/static-home/index.html">
+							http://udacity.github.io/js-basics/static-home/index.html </a>
+					</p>
+				</section>
+
+				<section>
+					<h2>Udacity Challenge</h2>
+					<ol>
+						<li>Open the Developer Tools</li>
+						<li>Click on the tab that says "Console"</li>
+						<li>Type the following code exactly how it appears here, then press enter:
+							<div data-markdown>
+							```javascript
+							$(".super-header-wrapper").html("<img style='width:100%' src='http://goo.gl/WCrBmS'>");
+							```
+						</div>
+						</li>
+						<li>What happens? (Try pressing refresh.)</li>
+					</ol>
+				</section>
+
 					<section>
 						<p>(HyperText Markup Language; markup language used to create websites)</p>
 					</section>
