Build out rest of template for Day 2

--- a/Class Presentations/reveal-presentations/Day2.html
+++ b/Class Presentations/reveal-presentations/Day2.html
@@ -211,9 +211,85 @@
 					</ol>
 				</section>
 
+				<section>
+					<h2>Goals</h2>
+					<ul class="checklist">
+						<li>
+							<input type="checkbox" id="goal1" checked/>
+							<label for="goal0">What is programming?</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal2" checked/>
+							<label for="goal1">Developer tools exploration</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal3"/>
+							<label for="goal2">Build an HTML document (classroom)</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal4"/>
+							<label for="goal3">Build an HTML document (computer)</label>
+						</li>
+					</ul>
+				</section>
 
+				<section>
+					<h2>
+					Build an HTML document (classroom)
+					</h2>
+				</section>
 
+				<section>
+					<h2>Goals</h2>
+					<ul class="checklist">
+						<li>
+							<input type="checkbox" id="goal1" checked/>
+							<label for="goal0">What is programming?</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal2" checked/>
+							<label for="goal1">Developer tools exploration</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal3" checked/>
+							<label for="goal2">Build an HTML document (classroom)</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal4"/>
+							<label for="goal3">Build an HTML document (computer)</label>
+						</li>
+					</ul>
+				</section>
 
+				<section>
+					<h2>
+					Build an HTML document (computer)
+					</h2>
+				</section>
+
+				<section>
+					<h2>Now We're Done</h2>
+					<ul class="checklist">
+						<li>
+							<input type="checkbox" id="goal1" checked/>
+							<label for="goal0">What is programming?</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal2" checked/>
+							<label for="goal1">Developer tools exploration</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal3" checked/>
+							<label for="goal2">Build an HTML document (classroom)</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal4" checked/>
+							<label for="goal3">Build an HTML document (computer)</label>
+						</li>
+					</ul>
+
+					<p text-align="right">At least...by our definition of done.</p>
+				</section>
 
 
 
