Add Teach a Man to Fish and titles of all other slides

--- a/Class Presentations/reveal-presentations/Day2.html
+++ b/Class Presentations/reveal-presentations/Day2.html
@@ -211,6 +211,15 @@
 					</ol>
 				</section>
 
+			<section>
+				<section>
+					<img src="../presentation-images/day2/teach-a-man-pt1.png" alt="Teach a man to fish" style="width:600px;height:600px;">
+				</section>
+				<section>
+					<img src="../presentation-images/day2/teach-a-man-pt2.png" alt="Teach a fish to man" style="width:350px;height:700px;">
+				</section>
+			</section>
+
 				<section>
 					<h2>Goals</h2>
 					<ul class="checklist">
@@ -240,6 +249,18 @@
 				</section>
 
 				<section>
+					<h2>Udacity Challenge v2</h2>
+					<p>Type the following into your browser: <br />
+					<a href="http://udacity.github.io/js-basics/static-home/index.html">
+						http://udacity.github.io/js-basics/static-home/index.html </a>
+						 <br /> <br />
+					What is on an HTML web page?</p>
+				</section>
+
+				<section data-background="../presentation-images/template/loading.jpg">
+				</section>
+
+				<section>
 					<h2>Goals</h2>
 					<ul class="checklist">
 						<li>
@@ -266,6 +287,186 @@
 					Build an HTML document (computer)
 					</h2>
 				</section>
+
+				<section>
+					<h2>
+						What does HTML stand for?
+					</h2>
+				</section>
+
+				<section>
+					<h2>HTML Speaks</h2>
+					<ul>
+						<li>HTML is short for Hypertext Markup Language</li>
+						<li>programming language === false;</li>
+						<li>Defines the structure of the web page</li>
+						<li>Uses tags (&lt;>) (&lt;/>)</li>
+						<li>Tree-like structure</li>
+					</ul>
+
+					<aside class="notes">
+						HTML stands for Hypertext Markup Language.
+						It’s not a programming language; it’s the markup language used to
+						create websites. (Sort of like taking notes in the margin of a
+						paper; you’ve got the actual information, then the stuff you write
+						about the information.) Web browsers “render” it to show webpages.
+						Developers try to keep the “stuff you write about the information”
+						to structure, like where it falls on the page. They use CSS to make
+						it look nice (“styling”), and JavaScript to make it interactive.
+					</aside>
+				</section>
+
+				<section>
+					<h2>Hello World!...</h2>
+				</section>
+
+				<section>
+					<h2>...If You Write It.</h2>
+					<ol>
+						<li>Make a new folder on your desktop and name it Dcode.</li>
+						<li>Make a new folder in Dcode named helloWorld.</li>
+						<li>Open a new document in Atom.</li>
+						<li>(File > ) Save As…</li>
+						<li>Save file in DCode as helloWorldHTML.html</li>
+						<li>Open Chrome (browser) and...</li>
+						<li>Open helloWorldHTML.html (File > Open File…)</li>
+					</ol>
+				</section>
+
+				<section>
+					<h2>What Goes Where?</h2>
+					<h3>Struc·ture</h3>
+					<i>ˈstrək(t)SHər/ (noun) </i> <br /> <br />
+					1. the arrangement of and relations between the parts or elements of something complex.</p>
+					<aside class="notes">
+						Structure: what is where on the page. Think of a newspaper,
+						and how some things are written in bigger text than others,
+						and headers, and images in one place...everything helps you
+						understand better what’s going on in the article.
+						Sure you can think of other examples of media that has structure.
+						(FB, Instagram)
+						Structural markup: elements used to describe headings and paragraphs
+					</aside>
+				</section>
+
+				<section>
+					<img src="../presentation-images/day2/newpaperimg.png" alt="Newspaper" style="width:600px;height:500px;">
+					<aside class="notes">
+						Newspapers are laid out with large headers to get the reader’s
+						attention. And columns to direct the flow of information. Most
+						readers naturally read from top to bottom, left to right.
+						Many webpages are styled to follow the same pattern.
+					</aside>
+				</section>
+
+				<section>
+					<img src="../presentation-images/day2/instagramimg.png" alt="Instagram" style="width:300px;height:500px;">
+					<aside class="notes">
+						Instagram uses headers and table layout to organize images
+						for their users.
+					</aside>
+				</section>
+
+				<section>
+					<h2>Elements</h2>
+				</section>
+
+				<section>
+					<h2>Tags</h2>
+				</section>
+
+				<section>
+					<h2>&lt;!DOCTYPE html></h2>
+				</section>
+
+				<section>
+					<h2>Your First Webpage!!</h2>
+				</section>
+
+				<section>
+					<h2>while(writingCode)</h2>
+				</section>
+
+				<section>
+					<h2>&lt;head> &lt;/head></h2>
+				</section>
+
+				<section>
+					<h2>Your First Webpage!!</h2>
+				</section>
+
+				<section>
+					<h2>&lt;body> &lt;/body></h2>
+				</section>
+
+				<section>
+					<h2>Your First Webpage!!</h2>
+				</section>
+
+				<section>
+					<h2>&lt;h1> &lt;/h1> - &lt;h6> &lt;/h6></h2>
+				</section>
+
+				<section>
+					<h2>Your First Webpage!!</h2>
+				</section>
+
+				<section>
+					<h2>&lt;p> &lt;/p></h2>
+				</section>
+
+				<section>
+					<h2>Your First Webpage!!</h2>
+				</section>
+
+				<section>
+					<h2>Attributes</h2>
+				</section>
+
+				<section>
+					<h2>Your First Webpage!!</h2>
+				</section>
+
+				<section>
+					<h2>break;</h2>
+				</section>
+
+				<section>
+					<h2>continue;</h2>
+				</section>
+
+				<section>
+					<h2>&lt;ol> &lt;/ol></h2>
+				</section>
+
+				<section>
+					<h2>Your First Webpage!!</h2>
+				</section>
+
+				<section>
+					<h2>&lt;ul> &lt;/ul></h2>
+				</section>
+
+				<section>
+					<h2>Your First Webpage!!</h2>
+				</section>
+
+				<section>
+					<h2>&lt;a> &lt;/a></h2>
+				</section>
+
+				<section>
+					<h2>Your First Webpage!!</h2>
+				</section>
+
+				<section>
+					<h2>Ship It!</h2>
+				</section>
+
+				<section>
+					<h2>Varieties of Fish</h2>
+				</section>
+
 
 				<section>
 					<h2>Now We're Done</h2>
